# hsp-finder

./: README.md  pyproject.toml
src/hsp_finder/: aligner.py
src/sliding_window/: aligner.py  formatter.py
